perf: serialize EventDataValue JSONB directly without intermediate HashMap DHIS2-21248
Write the Map-shaped JSON directly from the Set using JsonGenerator,
eliminating the HashMap allocation per flush in convertObjectToJson.